apps/jeju-cruise-frontend/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jeju-cruise-front
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cruise.klr.kr
      secretName: cruise-klr-kr-tls
  rules:
    - host: cruise.klr.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jeju-cruise-front
                port:
                  number: 3000
